# plenjos-settings

./: com.plenjos.Settings.json  meson.build
data/: com.plenjos.Settings.appdata.xml.in  com.plenjos.Settings.desktop.in  com.plenjos.Settings.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES
src/: display-settings-window.c  display-settings-window.h  display-settings-window.ui  main.c  meson.build  settings-window.c  settings-window.h  settings-window.ui  settings.gresource.xml  theme.css
src/appearance/: appearance-settings-window.c  appearance-settings-window.h  appearance-settings-window.ui
src/display/: display-settings-window.c  display-settings-window.h  display-settings-window.ui
src/network/: network-settings-window.c  network-settings-window.h  network-settings-window.ui  wifi-settings-window.ui
src/network-settings/: network-settings-window.c  network-settings-window.h  network-settings-window.ui
src/panel/: panel-settings-window.c  panel-settings-window.h  panel-settings-window.ui
